Creación de changepassword.js

--- a/changepassword.html
+++ b/changepassword.html
@@ -17,19 +17,20 @@
         </div>
         <div class="input-field">
           <i class="fas fa-lock"></i>
-          <input type="password" placeholder="Current Password" required>
+          <input type="password" placeholder="Current Password" required id="contrasenaActual">
         </div>
         <div class="input-field">
           <i class="fas fa-lock"></i>
-          <input type="password" placeholder="New Password" required>
+          <input type="password" placeholder="New Password" required id="nuevaContrasena">
         </div>
         <div class="input-field">
           <i class="fas fa-lock"></i>
-          <input type="password" placeholder="Confirm New Password" required>
+          <input type="password" placeholder="Confirm New Password" required id="confirmarContrasena">
         </div>
         <button type="submit">Let's Go Shop!</button>
       </form>
     </div>
   </div>
+  <script src="./changepassword.js"></script>
 </body>
 </html>
