Imagen configurada y no c q más

--- a/detallesproducto.html
+++ b/detallesproducto.html
@@ -31,12 +31,13 @@
   <main>
     <div class="container product-detail">
       <div class="product-image">
-        <img id="main-img" src="hoodie.jpg" alt="Nike Boys Fleece Hoodie">
+        <img id="main-img" src="hoodie.jpg" alt="Nike Boys Fleece Hoodie" style="width: 100%; height: auto;">
       </div>
       <div class="product-info">
-        <h1 id="title"></h1>
+        <h1 id="title">Nike Boys Fleece Hoodie"</h1>
         <p id="Price"></p>
-        <p id="description"> </p>
+        <p id="description">
+          Stay cozy in this soft, brown Nike hoodie with a classic logo on the chest. Perfect for layering or lounging in style.</p>
         <ul class="product-details">
           <li><strong>Size:</strong> S, M, L, XL</li>
           <li><strong>Color:</strong> Black</li>
@@ -61,7 +62,6 @@
           <div id="producto"></div>
           <script src="Product.js"></script>
           <script src="nikedetalleproducto.js"></script>
-          <script src="data.js"></script>
     </main>
 </body>
 </html>
