funciona el detalle producto

--- a/detallesproducto.html
+++ b/detallesproducto.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
   <title>Nike Boys Fleece Hoodie</title>
   <link rel="stylesheet" href="detallesproducto.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" crossorigin="anonymous">
 </head>
 <body>
 
@@ -17,15 +17,11 @@
       <div class="search-bar">
         <input type="text" placeholder="Search">
       </div>
-  
       <div class="user-actions">
-        <a href="user.html"> <span class="user-icon"></span> </a> 
-        <a href="detallesproducto.html"> <span class="cart-icon"></span> </a> 
-        <a href="favoritos.html"> <span class="heart-icon"></span> </a> 
+        <a href="user.html"><span class="user-icon"></span></a>
+        <a href="favoritos.html"><span class="heart-icon"></span></a>
       </div>
     </div>
-      <div>
-
   </header>
 
   <main>
@@ -34,37 +30,38 @@
         <img id="main-img" src="hoodie.jpg" alt="Nike Boys Fleece Hoodie">
       </div>
       <div class="product-info">
-        <h1 id="title"></h1>
-        <p id="Price"></p>
-        <p id="description"> </p>
+        <!-- Cambiado: Añadimos los IDs correctos -->
+        <h1 id="title">Nombre del Producto</h1>
+        <p id="Price">$0.00 USD</p>
+        <p id="Description">Descripción del producto aquí.</p>
+
+        <label for="size">Elige una talla:</label>
+        <select id="size">
+          <option value="S">S</option>
+          <option value="M">M</option>
+          <option value="L">L</option>
+          <option value="XL">XL</option>
+        </select>
+
         <ul class="product-details">
-          <li><strong>Size:</strong> S, M, L, XL</li>
           <li><strong>Color:</strong> Black</li>
         </ul>
+
         <div class="actions">
-          <a href="index.html" class="continue-shopping">Continue Shopping</a> 
+          <a href="index.html" class="continue-shopping">Continue Shopping</a>
           <button class="buy-now">Buy Now</button>
-          <div class="payment-method">
-            <p>Payment method:</p>
-            <a href="https://www.mastercard.com/" target="_blank">
-              <img src="Mastercard-logo.svg (1).png" class="payment-method-icon" alt="Mastercard Logo">
-            </a>
-            
-            <a href="https://www.visa.com/" target="_blank">
-              <img src="VISA-Logo.png" class="payment-method-icon" alt="Visa Logo">
-            </a>
-          
-          </div>
         </div>
-        <div class="container">
-          <p>&copy; 2024 TrendyFind Juan José Holguín & Jacobo Salazar.</p>
-          <div id="producto"></div>
-          <script src="Product.js"></script>
-          <script src="nikedetalleproducto.js"></script>
-          <script src="data.js"></script>
-    </main>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 TrendyFind Juan José Holguín & Jacobo Salazar.</p>
+  </footer>
+
+  <script src="Product.js"></script>
+  <script src="data.js"></script>
+  <script src="detallesproducto.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
-<footer>
-  </div>
-</footer>
