--- a/index.html
+++ b/index.html
@@ -15,42 +15,38 @@
       <div class="search-bar">
         <input type="text" placeholder="Search">
       </div>
- 
-        <div class="user-actions">
-          <a href="user.html"> <span class="user-icon"></span> </a> 
-          <a href="detallesproducto.html"> <span class="cart-icon"></span> </a> 
-          <a href="favoritos.html"> <span class="heart-icon"></span> </a> 
-        </div>
-      </div>
-        </button>
+      <div class="user-actions">
+        <a href="user.html"> <span class="user-icon"></span> </a> 
+        <a href="detallesproducto.html"> <span class="cart-icon"></span> </a> 
+        <a href="favoritos.html"> <span class="heart-icon"></span> </a> 
       </div>
     </div>
     <div class="category-dropdown">
-    <h2>Deal Type:</h2>
-    <a href="">Deal of the Day</a>
-    <a href="">Flash Sale</a>
-    
-    <h2>Categories</h2>
-    <a href="detallesproducto.html" class="back-to-home">T-shirts</a>
-    <a href="detallesproducto.html" class="back-to-home">Jackets</a>
-    <a href="detallesproducto.html" class="back-to-home">Jeans</a>
-    <a href="detallesproducto.html" class="back-to-home">Shoes</a>
-    <a href="detallesproducto.html" class="back-to-home">Glasses</a>
-    <a href="detallesproducto.html" class="back-to-home">Underwear</a>
+      <h2>Deal Type:</h2>
+      <a href="">Deal of the Day</a>
+      <a href="">Flash Sale</a>
+      
+      <h2>Categories</h2>
+      <a href="detallesproducto.html" class="back-to-home">T-shirts</a>
+      <a href="detallesproducto.html" class="back-to-home">Jackets</a>
+      <a href="detallesproducto.html" class="back-to-home">Jeans</a>
+      <a href="detallesproducto.html" class="back-to-home">Shoes</a>
+      <a href="detallesproducto.html" class="back-to-home">Glasses</a>
+      <a href="detallesproducto.html" class="back-to-home">Underwear</a>
     </div>
   </header>
 
   <main class="container">
-    <div class="product-grid"  id="products">
-
-    </div>
+    <div class="product-grid" id="products"></div>
   </main>
-  <script  src="data.js"></script>
-  <script  src="Product.js"></script>
-  <script src="estodeberiaserunix.js"></script>
+
+  <footer>
+    <script src="data.js"></script>
+  <script src="Product.js"></script>
+  <script src="index.js"></script>
     <div class="container">
       <p>&copy; 2024 TrendyFind Juan José Holguín & Jacobo Salazar.</p>
     </div>
+  </footer>
 </body>
 </html>
-<footer></footer>
