--- a/detallesproducto.html
+++ b/detallesproducto.html
@@ -27,9 +27,10 @@
   <main>
     <div class="container product-detail">
       <div class="product-image">
-        <img id="main-img" src="hoodie.jpg" alt="Nike Boys Fleece Hoodie">
+        <img id="main-img" src="hoodie.jpg" alt="Nike Boys Fleece Hoodie" style="width: 100%; height: auto;">
       </div>
       <div class="product-info">
+
         <!-- Cambiado: Añadimos los IDs correctos -->
         <h1 id="title">Nombre del Producto</h1>
         <p id="Price">$0.00 USD</p>
@@ -43,6 +44,7 @@
           <option value="XL">XL</option>
         </select>
 
+
         <ul class="product-details">
           <li><strong>Color:</strong> Black</li>
         </ul>
@@ -51,6 +53,7 @@
           <a href="index.html" class="continue-shopping">Continue Shopping</a>
           <button class="buy-now">Buy Now</button>
         </div>
+
       </div>
     </div>
   </main>
@@ -63,5 +66,8 @@
   <script src="data.js"></script>
   <script src="detallesproducto.js"></script>
   <script src="index.js"></script>
+
+    </main>
+
 </body>
 </html>
