--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TrendyFind</title>
   <link rel="stylesheet" href="index.css">
 </head>
@@ -17,7 +19,6 @@
       </div>
       <div class="user-actions">
         <a href="user.html"> <span class="user-icon"></span> </a> 
-        <a href="detallesproducto.html"> <span class="cart-icon"></span> </a> 
         <a href="favoritos.html"> <span class="heart-icon"></span> </a> 
       </div>
     </div>
@@ -25,7 +26,6 @@
       <h2>Deal Type:</h2>
       <a href="">Deal of the Day</a>
       <a href="">Flash Sale</a>
-      
       <h2>Categories</h2>
       <a href="detallesproducto.html" class="back-to-home">T-shirts</a>
       <a href="detallesproducto.html" class="back-to-home">Jackets</a>
@@ -42,8 +42,9 @@
 
   <footer>
     <script src="data.js"></script>
-  <script src="Product.js"></script>
-  <script src="index.js"></script>
+    <script src="Product.js"></script>
+    <script src="index.js"></script>
+    <script src="favoritos.js"></script>
     <div class="container">
       <p>&copy; 2024 TrendyFind Juan José Holguín & Jacobo Salazar.</p>
     </div>
