--- a/changepassword.html
+++ b/changepassword.html
@@ -3,17 +3,17 @@
 <head>
   <title>Change Password</title>
   <link rel="stylesheet" href="changepassword.css"> 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7tcenmpD1ypASozpmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <div class="container">
     <div class="change-password-form">
       <h1>Change Password</h1>
       <h2>Update your password</h2>
-      <form action="./index.html" method="get">
+      <form id="changePasswordForm" onsubmit="return cambiarContrasena()">
         <div class="input-field">
           <i class="fas fa-envelope"></i>
-          <input type="email" placeholder="Email" required>
+          <input type="email" id="email" placeholder="Email" required>
         </div>
         <div class="input-field">
           <i class="fas fa-lock"></i>
@@ -31,6 +31,6 @@
       </form>
     </div>
   </div>
-  <script src="./changepassword.js"></script>
+  <script src="changepassword.js"></script>
 </body>
 </html>
